tests/semantic/valid/65_i3_param_via_call.hulk
function inc(x) => x + 1;

print(inc(0));
