tests/semantic/invalid/35_e_attr_conflicts_method.hulk
type Point(x:Number) {
    x:Number = x;
    x() => 1;
}
print(0);
